# linger

./: .env.example  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.linger/: init.json
config/: app.toml  auth.toml  database.toml  email.toml  logging.toml  server.toml  session.toml  static.toml  templates.toml
docs/: architecture.md  auth.md  cli.md  configuration.md  csrf.md  database.md  deployment.md  email.md  generators.md  getting-started.md  roadmap.md  templates.md  testing.md
migrations/: 0001_auth.sql
src/: app.rs  cli.rs  config.rs  csrf.rs  db.rs  email.rs  error.rs  generator.rs  jobs.rs  lib.rs  main.rs  repositories.rs  router.rs  server.rs  state.rs  telemetry.rs  templates.rs  view.rs
src/auth/: mod.rs  repository.rs
src/health/: mod.rs
src/home/: mod.rs
static/css/: app.css
static/js/: app.js
templates/emails/: reset_password.html  reset_password.txt  verify_email.html  verify_email.txt
templates/layouts/: app.html  auth.html
templates/pages/auth/: login.html  register.html
templates/pages/auth/email/: verify.html
templates/pages/auth/password/: forgot.html  reset.html
templates/pages/health/: show.html
templates/pages/home/: index.html
templates/shared/: flash.html
tests/: foundation.rs
tests/feature/: csrf.rs  health.rs  migration.rs
tests/unit/: config.rs  generator.rs  templates.rs
